--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,35 @@
-apply plugin: 'application'
-apply plugin: 'java'
+plugins {
+    id 'application'
+    id 'java'
+    id 'war'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation "joda-time:joda-time:2.2"
-    testImplementation "junit:junit:4.12"
+    implementation "joda-time:joda-time:2.10.13"
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
+    testImplementation "org.mockito:mockito-junit-jupiter:4.2.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
+    implementation "javax.servlet:javax.servlet-api:4.0.1"
+    implementation "commons-digester:commons-digester:2.1"
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.geekhub.Main'
-    }
-}
 
 ext {
     javaMainClass = "java.com.geekhub.Main"
 }
 
+run {
+    standardInput(System.in)
+}
+
+test {
+    useJUnitPlatform()
+}
 
 application {
     mainModule = 'java.com.geekhub'
@@ -28,6 +38,10 @@ application {
 
 application {
     mainClassName = javaMainClass
+}
+
+war {
+    webAppDirectory = file('homework.webapp.build.libs')
 }
 
 subprojects {
