--- a/homework/domain/build.gradle
+++ b/homework/domain/build.gradle
@@ -1,9 +1,14 @@
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation "joda-time:joda-time:2.2"
-    testImplementation "junit:junit:4.12"
+    implementation "joda-time:joda-time:2.10.13"
+    implementation "org.junit.jupiter:junit-jupiter:5.8.1"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+    testImplementation "org.mockito:mockito-junit-jupiter:4.2.0"
+}
+
+test {
+    useJUnitPlatform()
 }
