--- a/homework/consoleapp/build.gradle
+++ b/homework/consoleapp/build.gradle
@@ -2,8 +2,13 @@ apply plugin: 'application'
 
 
 dependencies {
-    implementation "joda-time:joda-time:2.2"
-    testImplementation "junit:junit:4.12"
-    implementation  'log4j:log4j:1.2.17'
+    implementation "joda-time:joda-time:2.10.13"
+    implementation "org.junit.jupiter:junit-jupiter:5.8.1"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+    testImplementation "org.mockito:mockito-junit-jupiter:4.2.0"
     implementation project(':homework:domain')
+}
+
+test {
+    useJUnitPlatform()
 }
