--- a/homework/consoleapp/build.gradle
+++ b/homework/consoleapp/build.gradle
@@ -2,10 +2,34 @@ apply plugin: 'application'
 
 
 dependencies {
-    implementation "joda-time:joda-time:2.10.13"
-    implementation "org.junit.jupiter:junit-jupiter:5.8.1"
-    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
-    testImplementation "org.mockito:mockito-junit-jupiter:4.2.0"
+    implementation 'joda-time:joda-time:2.10.14'
+
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
+
+    implementation "commons-digester:commons-digester:2.1"
+
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.5'
+
+    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.17'
+    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.17'
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.17'
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.17'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.17'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.6.4'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.6.4'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.6.4'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
+
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
     implementation project(':homework:domain')
 }
 
